# research-pr-salaries

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose.yaml  environment.yml  flake.nix  main.py  pyproject.toml  reg.py  requirements.txt  shell.nix
data/: impact.parquet
docs/: AEA.cls  abstract.tex  beamerthemeconfposter.sty  paper.tex  poster.tex  references.bib
notebooks/: alternative_reg.ipynb  census_api.ipynb  data_process.qmd  dif-dif.ipynb  geo_DiD.ipynb  geo_maps.qmd  geolift.ipynb  geomap.ipynb  graphs.ipynb  k-index.qmd  maps.ipynb  min_sal.qmd  poster.ipynb  reg.py  salaries.ipynb  scratch.ipynb  scratch2.ipynb  semipar.qmd  semitest.qmd  spatial_geo.qmd  spatial_reg.qmd
src/: models.py
src/dao/: dp03_table.py  muni_table.py  municipalities_table.py  zips_table.py
src/data/: data_process.py
src/pr_salaries/: __init__.py  utils.py
src/pr_salaries_replication/: utils.py
src/prsal_repl/: __init__.py  prsal_reg.py  utils.py
