[project]
name = "pr-salaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.13"
dependencies = [
    "censusforge>=0.5.0",
    "jp-qcew>=3.0.1",
    "jp-tools>=0.5.4",
]

[project.scripts]
pr-salaries = "pr_salaries:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
