[project]
name = "prsal_repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = [
  "bambi>=0.17.2",
  "censusforge>=0.5.1",
  "geopandas>=1.1.2",
  "jp-qcew>=3.0.1",
  "jp-tools>=0.5.6",
  "libpysal>=4.14.1",
  "pandas>=2.3.3",
  "plotly>=6.5.2",
  "polars>=1.37.0",
  "pymc>=5.28.0",
  "pysal>=26.1",
  "pytensor>=2.38.0",
  "shapely>=2.1.2",
]

[project.scripts]
research-pr-salaries = "prsal_repl:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
]
